--- a/pages/menu_chic.css
+++ b/pages/menu_chic.css
@@ -8,17 +8,9 @@
 }
 
 @font-face {
-    font-family: 'devonshireregular';
-    src: url('fonts/devonshire/devonshire-regular-webfont.woff2') format('woff2'),
-         url('fonts/devonshire/devonshire-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'caveatbold';
-    src: url('fonts/caveat/caveat-bold-webfont.woff2') format('woff2'),
-         url('fonts/caveat/caveat-bold-webfont.woff') format('woff');
+    font-family: 'croissant_oneregular';
+    src: url('fonts/croissant_one/croissantone-regular-webfont.woff2') format('woff2'),
+         url('fonts/croissant_one/croissantone-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -58,45 +50,60 @@ main
     height: 100%;
     margin: auto;
     text-align: center;
-    background-color: #fcdfdb;
+    font-family: Arial, Helvetica, serif;
+    background-color: #fff5fe;
     color: #3d1319;
     box-shadow: 0px 0px 10px -3px black;
     margin-bottom: 100px;
+    padding-bottom: 150px;
 }
 
 h2
 {
-    font-family: 'devonshireregular', cursive;
-    font-style: normal;
+    text-align: center;
+    font-family: 'croissant_oneregular';
     font-size: 3em;
-    font-weight: normal;
-    padding-top: 30px;
-}
-
-.fas
-{
-    font-size: 4rem;
-    background: -webkit-linear-gradient(left, #f04a5e, #f78f6a);
+    background: linear-gradient(150deg, #e38913, #af6ca6, #8f5aff);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    padding: 100px 0 70px 0;
 }
 
 h3
 {
     display: inline-block;
-    font-family: 'caveatbold', Cursive, serif;
-    font-size: 2.5em;
+    text-align: center;
 }
 
-hr
+.appetit hr
 {
     position: relative;
-    top: 70px;
+    top: 50px;
     height: 25px;
-    margin-top: 30px;
     border: none;
-    text-align: center;
-    background: url(images/menu1_hr.svg) no-repeat top center;
+    background: url(images/menu2_hr1.svg) no-repeat top center;
+    background-size: 840px 25px;
+}
+
+.plaisir hr 
+{
+    position: relative;
+    top: 50px;
+    height: 25px;
+    border: none;
+    background: url(images/menu2_hr2.svg) no-repeat top center;
+    background-size: 840px 25px;
+}
+
+.gourmandise hr 
+{
+    position: relative;
+    top: 50px;
+    height: 25px;
+    border: none;
+    background: url(images/menu2_hr3.svg) no-repeat top center;
+    background-size: 840px 25px;
 }
 
 h3.left
@@ -123,21 +130,51 @@ h3.left:hover::before
     width: 100%;
 }
 
+.appetit h3.left::before
+{
+    background-color:#c67412;
+}
+
+.plaisir h3.left:hover::before
+{
+    background-color: #a56799;
+}
+
+.gourmandise h3.left:hover::before
+{
+    background-color:#6e4ccc;
+}
+
+.appetit
+{
+    color: #c67412; 
+}
+
+.plaisir
+{
+    color: #a56799;
+}
+
+.gourmandise
+{
+    color: #6e4ccc;
+}
+
 ul
 {
     list-style-type: none;
-    font-family: 'caveatbold',cursive;
-    font-size: 1.5em;
+    font-family: serif, Arial, Helvetica;
     text-align: justify;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0 0 70px 0;
 }
 
-li 
+li
 {
     display: flex;
     justify-content: space-around;
     padding: 10px;
+    font-size: 1em;
 }
 
 span 
@@ -147,20 +184,12 @@ span
 
 aside 
 {
-    width: 1rem;
+    width: 5rem;
 }
 
-.mouvement span {
-    width: 46rem;
-}
-
-.note-foot
+.gourmandise span
 {
-    font-family: 'devonshireregular', cursive;
-    font-style: normal;
-    font-size: 2em;
-    font-weight: normal;
-    padding: 30px 0;
+    width: 48rem;
 }
 
 footer
@@ -187,24 +216,25 @@ footer p:hover
     animation: shake .060s ease-in-out .060s infinite alternate;
 }
 
-.trait::before {
+.trait::before
+{
     content: "";
     position: absolute;
-    top: 355px;
-    right: 190px;
-    border: #3d1319 50px solid;
-    width: 150px;
+    top: 420px;
+    right: 120px;
+    border:  #c67412 30px solid;
+    width: 250px;
     height: 0px;
     bottom: auto;
-    clip-path: polygon(38% 60%, 74% 62%, 100% 60%, 100% 65%, 50% 64%, 3% 65%, 2% 61%);
+    clip-path:polygon(33% 43%, 55% 52%, 100% 54%, 100% 55%, 55% 59%, 33% 66%, 21% 59%, 6% 55%, 6% 55%, 21% 50%);
+  
 }
 
 /*RESPONSIVE DESIGN*/
 
-
 @media screen and (max-width: 1024px)
 {
-     main
+    main
     {
         display: flex;
         flex-direction: column;
@@ -214,47 +244,37 @@ footer p:hover
         font-family: "Comic Sans MS";
     }
 
-    .fas 
+    h3 
     {
-        font-size: 7rem;
-    }
-
-    h2 
-    {
-        font-size: 5em;
+        font-size: 2em;
     }
 
     hr 
     {
-        position:relative;
-        left:10px;
-    }
-
-    h3 
-    {
-        font-size: 3em;
+        display:none;
     }
 
     ul 
     {
-        font-size: 2.6em;
-        padding: 0 20px;
+        padding: 0 20px 70px;
+        font-size: 2em;
     }
-
+    
     li
     {
         display: block;
         padding:10px;
     }
 
-    aside {
+    aside 
+    {
         text-align: center;
         width: auto;
     }
 
-    .note-foot 
+    .gourmandise
     {
-        font-size: 3em;
+        margin-bottom: 30px;
     }
 
     footer p
@@ -265,17 +285,7 @@ footer p:hover
 
 @media screen and (max-width: 768px)
 {
-    h2 
-    {
-        font-size: 3em;
-    }
-
-    h3 
-    {
-        font-size: 2.5em;
-    }
-
-    hr
+    hr 
     {
         display: none;
     }
@@ -284,10 +294,4 @@ footer p:hover
     {
         font-size: 2em;
     }
-
-    .note-foot 
-    {
-        font-size: 2em;
-    }
-
 }
