--- a/pages/menu_delice.css
+++ b/pages/menu_delice.css
@@ -8,11 +8,12 @@
 }
 
 @font-face {
-    font-family: 'devonshireregular';
-    src: url('fonts/devonshire/devonshire-regular-webfont.woff2') format('woff2'),
-         url('fonts/devonshire/devonshire-regular-webfont.woff') format('woff');
+    font-family: 'Dancing Script';
+    src: url('fonts/dancing_script/DancingScript-Regular.woff2') format('woff2'),
+        url('fonts/dancing_script/DancingScript-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -58,45 +59,63 @@ main
     height: 100%;
     margin: auto;
     text-align: center;
-    background-color: #fcdfdb;
-    color: #3d1319;
+    font-family: serif, Arial, Helvetica;
+    background-color: #edefef;
     box-shadow: 0px 0px 10px -3px black;
     margin-bottom: 100px;
+    padding-bottom: 150px;
+    font-style: italic;
 }
 
 h2
 {
-    font-family: 'devonshireregular', cursive;
-    font-style: normal;
-    font-size: 3em;
+    text-align: center;
+    font-family:'Dancing Script', Cursive;
+    font-size: 3.8em;
     font-weight: normal;
-    padding-top: 30px;
-}
-
-.fas
-{
-    font-size: 4rem;
-    background: -webkit-linear-gradient(left, #f04a5e, #f78f6a);
+    background: linear-gradient(90deg, #023be3, #229df9);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    padding: 100px 0 70px 0;
 }
 
 h3
 {
     display: inline-block;
-    font-family: 'caveatbold', Cursive, serif;
-    font-size: 2.5em;
+    text-align: center;
+    font-family: 'caveatbold';
+    font-size: 2em;
 }
 
-hr
+.commencer hr
 {
     position: relative;
-    top: 70px;
+    top: 75px;
     height: 25px;
-    margin-top: 30px;
     border: none;
-    text-align: center;
-    background: url(images/menu1_hr.svg) no-repeat top center;
+    background: url(images/menu3_hr1.svg) no-repeat top center;
+    background-size: 840px 25px;
+}
+
+.continuer hr 
+{
+    position: relative;
+    top: 75px;
+    height: 25px;
+    border: none;
+    background: url(images/menu3_hr2.svg) no-repeat top center;
+    background-size: 840px 25px;
+}
+
+.terminer hr 
+{
+    position: relative;
+    top: 75px;
+    height: 25px;
+    border: none;
+    background: url(images/menu3_hr3.svg) no-repeat top center;
+    background-size: 840px 25px;
 }
 
 h3.left
@@ -112,7 +131,7 @@ h3.left::before
   height: 2px;
   bottom: 0;
   left: auto;
-  background-color: #3c1218;
+  background-color: black;
   visibility: hidden;
   transition: all 0.3s ease-in-out;
 }
@@ -126,18 +145,19 @@ h3.left:hover::before
 ul
 {
     list-style-type: none;
-    font-family: 'caveatbold',cursive;
-    font-size: 1.5em;
+    font-family: 'caveatbold', Cursive, serif;
+    font-size: 1.3em;
     text-align: justify;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
 }
 
-li 
+li
 {
     display: flex;
     justify-content: space-around;
     padding: 10px;
+    font-size: 1.1em;
 }
 
 span 
@@ -147,20 +167,7 @@ span
 
 aside 
 {
-    width: 1rem;
-}
-
-.mouvement span {
-    width: 46rem;
-}
-
-.note-foot
-{
-    font-family: 'devonshireregular', cursive;
-    font-style: normal;
-    font-size: 2em;
-    font-weight: normal;
-    padding: 30px 0;
+    width: 5rem;
 }
 
 footer
@@ -187,12 +194,15 @@ footer p:hover
     animation: shake .060s ease-in-out .060s infinite alternate;
 }
 
-
 /*RESPONSIVE DESIGN*/
-
 
 @media screen and (max-width: 1024px)
 {
+    h2
+    {
+        padding: 0;
+    }
+
      main
     {
         display: flex;
@@ -203,30 +213,20 @@ footer p:hover
         font-family: "Comic Sans MS";
     }
 
-    .fas 
-    {
-        font-size: 7rem;
-    }
-
-    h2 
-    {
-        font-size: 5em;
-    }
-
-    hr 
-    {
-        display: none;
-    }
-
     h3 
     {
         font-size: 3em;
     }
 
+    hr 
+    {
+        display:none;
+    }
+
     ul 
     {
-        font-size: 2.6em;
-        padding: 0 20px;
+        padding: 0 20px 70px;
+        font-size: 2em;
     }
 
     li
@@ -235,42 +235,19 @@ footer p:hover
         padding:10px;
     }
 
-    aside {
+    aside 
+    {
         text-align: center;
         width: auto;
     }
 
-    .note-foot 
+    .terminer
     {
-        font-size: 3em;
+        margin-bottom: 30px;
     }
 
     footer p
     {
         font-size: 1.3em;
     }
-}
-
-@media screen and (max-width: 768px)
-{
-    h2 
-    {
-        font-size: 3em;
-    }
-
-    h3 
-    {
-        font-size: 2.5em;
-    }
-
-    ul 
-    {
-        font-size: 2em;
-    }
-
-    .note-foot 
-    {
-        font-size: 2em;
-    }
-
 }
